plugins {
	id 'fabric-loom' version '1.14.7'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = "${project.archives_base_name}+mc${project.minecraft_version}"
}

repositories {
    mavenCentral()
	maven {	url = 'https://maven.fabricmc.net/'}
    maven { url = "https://maven.shedaniel.me/" }
    maven { url = "https://maven.terraformersmc.com/releases/" }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { 
        exclude(group: "net.fabricmc.fabric-api") 
    }
    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
}

processResources {
	def targetVersion = project.version
	inputs.property "version", targetVersion

	filesMatching("fabric.mod.json") {
		expand "version": targetVersion
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 8
	it.options.encoding = 'UTF-8'
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8
}

jar {
	def baseName = project.base.archivesName.get()
	from("LICENSE") {
		rename { "${it}_${baseName}" }
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	repositories {
		// publish config optional
	}
}